mule-user-guide/v/3.8/pop3-transport-reference.adoc
= POP3 Transport Reference
:keywords: email, transport, pop3, connector

The POP3 transport can be used for receiving messages from POP3 inboxes. The POP3S tranport connects to POP3 mailboxes using the `javax.mail` API.

[WARNING]
====
*Warning*

POP3 polling may fail if geronimo-mail is in the CLASSSPATH. For information on this problem, consult link:http://www.mulesoft.org/jira/browse/MULE-4875[MULE-4875].
====

TLS/SSL connections are made on behalf of an entity, which can be anonymous or identified by a certificate. The key store provides the certificates and associated private keys necessary for identifying the entity making the connection. Additionally, connections are made to trusted systems. The public certificates of trusted systems are stored in a trust store, which is used to verify that the connection made to a remote system matches the expected identity.

== Transport Info

[width="100%",cols="10%,9%,9%,9%,9%,9%,9%,9%,9%,9%,9%",options="header",]
|===
a|
Transport

 a|
Doc

 a|
Inbound

 a|
Outbound

 a|
Request

 a|
Transactions

 a|
Streaming

 a|
Retries

 a|
MEPs

 a|
Default MEP

 a|
Maven Artifact

|POP3 |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc +
] link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3/namespace-overview.html[SchemaDoc] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-pop3

|POP3S |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/email/package-summary.html[JavaDoc +
]
http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SchemaDoc] |image:check.png[check] |image:error.png[error] |image:check.png[check] |image:error.png[error] |image:error.png[error] |image:error.png[error] |one-way |one-way |org.mule.transport:mule-transport-pop3s

|===

 Legend

*Transport* - The name/protocol of the transport +
*Docs* - Links to the JavaDoc and SchemaDoc for the transport +
*Inbound* - Whether the transport can receive inbound events and can be used for an inbound endpoint +
*Outbound* - Whether the transport can produce outbound events and be used with an outbound endpoint +
*Request* - Whether this endpoint can be queried directly with a request call (via MuleClinet or the EventContext) +
*Transactions* - Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction. +
*Streaming* - Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming. +
*Retry* - Whether this transport supports retry policies. Note that all transports can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft +
*MEPs* - Message Exchange Patterns supported by this transport +
*Default MEP* - The default MEP for endpoints that use this transport that do not explicitly configure a MEP +
*Maven Artifact* - The group name a artifact name for this transport in link:http://maven.apache.org/[Maven]

== Namespace and Syntax

XML namespace:

[source, xml, linenums]
----
xmlns:pop3 "http://www.mulesoft.org/schema/mule/pop3"
xmlns:pop3s "http://www.mulesoft.org/schema/mule/pop3s"
----

XML Schema location:

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd
----

Connector syntax:

[source, xml, linenums]
----
<pop3:connector name="pop3Connector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"
                deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>
<pop3s:connector name="pop3sConnector" backupEnabled="true" backupFolder="backup" checkFrequency="90000"
                 deleteReadMessages="false" mailboxFolder="INBOX" moveToFolder="PROCESSED"/>
  <pop3s:tls-client path="clientKeystore" storePassword="mulepassword" />
  <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password" />
</pop3s:connector>
----

Endpoint syntax:

You can define your endpoints 2 different ways:

. Prefixed endpoint:
+
[source, xml, linenums]
----
<pop3:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
<pop3s:inbound-endpoint user="bob" password="password" host="localhost" port="65433"/>
----

. Non-prefixed URI:
+
[source, xml, linenums]
----
<inbound-endpoint address="pop3://bob:password@localhost:65433"/>
<inbound-endpoint address="pop3s://bob:password@localhost:65433"/>
----

See the sections below for more information.

== Features

* Simple to configure email access on inbound endpoints: including authentication information and check frequency
* Automate the handling of email attachments
* Automatically back up messages to a specified folder
* Automatically delete read messages
* Easy to configure tls security

== Usage

If you want to include the POP3 email transport in your configuration, these are the namespaces you need to define:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd">
...
----

For the secure version, you would use the following:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3s="http://www.mulesoft.org/schema/mule/pop3s"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd">
----

Then you need to configure your connector and endpoints as described below.

=== Configuration Example

Say you had a business and wanted to take orders through email attachments. After you receive the email, you want to save the order attachments so they could be picked up by your order fulfillment process. Here is the flow-based version:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
       xmlns:file="http://www.mulesoft.org/schema/mule/file"
       xmlns:email="http://www.mulesoft.org/schema/mule/email"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/current/mule-email.xsd
       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd">
 
    <pop3:connector name="pop3Connector"  />
 
    <expression-transformer name="returnAttachments">
        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❶
    </expression-transformer>
 
    <file:connector name="fileName">
        <file:expression-filename-parser/>
    </file:connector>
     
    <flow name="incoming-orders">
        <pop3:inbound-endpoint user="bob" password="password" host="mailServer"
                               port="110" transformer-refs="returnAttachments"/> ❷
        <collection-splitter/> ❸
        <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹
            <expression-transformer>
                <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺
            </expression-transformer>
        </file:outbound-endpoint>                   
    </flow>
</mule>
----

The built-in transformer is declared on ❶ and gets the list of email attachments. This transformer is then applied to the pop3 inbound endpoint defined at ❷. Then we define a list list-message-splitter-router on ❸ which will iterate through all of the email attachments. Next we define a file outbound endpoint which will write the attachment to the './received' directory with a datestamp as the file name on ❹. ❺ defines a simple groovy expression which gets the inputStream of the attachment to write the file.

Here is the secure version:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xmlns:vm="http://www.mulesoft.org/schema/mule/vm"
       xmlns:file="http://www.mulesoft.org/schema/mule/file"
       xmlns:email="http://www.mulesoft.org/schema/mule/email"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd
       http://www.mulesoft.org/schema/mule/email http://www.mulesoft.org/schema/mule/email/current/mule-email.xsd
       http://www.mulesoft.org/schema/mule/vm http://www.mulesoft.org/schema/mule/vm/current/mule-vm.xsd">
 
    <pop3:connector name="pop3Connector"  />
 
<pop3s:connector name="POP3" validateConnections="true" doc:name="POP3">
        <pop3s:tls-client path="clientKeystore" storePassword="mulepassword"/>
        <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password"/>
    </pop3s:connector>
 
    <expression-transformer name="returnAttachments">
        <return-argument evaluator="attachments-list" expression="*" optional="false"/>  ❶
    </expression-transformer>
 
    <file:connector name="fileName">
        <file:expression-filename-parser/>
    </file:connector>
     
    <flow name="incoming-orders">
        <pop3:inbound-endpoint user="bob" password="password" host="mailServer"
                               port="110" transformer-refs="returnAttachments"
                               connector-ref="POP3"/> ❷
        <collection-splitter/> ❸
        <file:outbound-endpoint path="./received" outputPattern="#[function:datestamp].dat"> ❹
            <expression-transformer>
                <return-argument expression="payload.inputStream" evaluator="groovy" /> ❺
            </expression-transformer>
        </file:outbound-endpoint>                   
    </flow>
</mule>
----

The pop3s connector has tls client and server keystore information as defined on ❶. The built-in transformer is declared on ❷ and gets the list of email attachments. This transformer is then applied to the inbound endpoint on ❸. Then we define a list list-message-splitter-router on ❹ which will iterate through all of the email attachments. Next we define a file outbound endpoint which will write the attachment to the './received' directory with a datestamp as the file name on ❺. ❻ defines a simple groovy expression which gets the inputStream of the attachment to write the file.

== Configuration Reference

=== Connectors

The POP3 connector supports all the link:/mule-user-guide/v/3.8/configuring-a-transport[common connector attributes and properties] and the following additional attributes:

[width="100%",cols="25%,25%,25%,25%",options="header",]
|=============
|Attribute |Description |Default |Required
|backupEnabled |Whether to save copies to the backup folder |False |No
|backupFolder |The folder where messages are moved after they have been read. |  |No
|checkFrequency |Period (ms) between poll connections to the server. |60000 |Yes
|mailboxFolder |TThe remote folder to check for email. |INBOX |No
|deleteReadMessages |Whether to delete messages from the server when they have been downloaded. If set to false, the messages are set to defaultProcessMessageAction attribute value. |true |No
|moveToFolder |The remote folder to move mail to once it has been read. It is recommended that 'deleteReadMessages' is set to false when this is used. +
 This is very useful when working with public email services such as GMail where marking messages for deletion doesn't work. Instead set the @moveToFolder=GMail/Trash. |  |No
|defaultProcessMessageAction |The action performed if the deleteReadMessages attribute is set to false. Valid values are: ANSWERED, DELETED, DRAFT, FLAGGED, RECENT, SEEN, USER, and NONE |SEEN |No
|=============

For the secure version, the following elements are also required:

[width="100%",cols="50%,50%",options="header",]
|============
|Element |Description
|tls-client a|
Configures the client key store with the following attributes:

* path: The location (which will be resolved relative to the current classpath and file system, if possible) of the keystore that contains public certificates and private keys for identification
* storePassword: The password used to protect the keystore
* class: The type of keystore used

|tls-trust-store a|
Configures the trust store. The attributes are:

* path: The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store that contains public certificates of trusted servers
* storePassword: The password used to protect the trust store

|============

For example:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3="http://www.mulesoft.org/schema/mule/pop3"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3 http://www.mulesoft.org/schema/mule/pop3/current/mule-pop3.xsd">
 
     <pop3:connector name="pop3Connector" backupEnabled="true" backupFolder="newBackup" checkFrequency="1234"
                     mailboxFolder="newMailbox" deleteReadMessages="false"/>
 
...
----

Secure version:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
       xmlns:pop3s="http://www.mulesoft.org/schema/mule/pop3s"
       xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
       http://www.mulesoft.org/schema/mule/pop3s http://www.mulesoft.org/schema/mule/pop3s/current/mule-pop3s.xsd">

<pop3s:connector name="pop3sConnector">
  <pop3s:tls-client path="clientKeystore" storePassword="mulepassword" />
  <pop3s:tls-trust-store path="greenmail-truststore" storePassword="password" />
</pop3s:connector>
<flow name="relay">
      <pop3s:inbound-endpoint user="bob" password="password" host="mailServer"/> ❷
...
----

== Endpoints

POP3 and POP3S endpoints include details about connecting to a POP3 mailbox. You link:/mule-user-guide/v/3.8/endpoint-configuration-reference[configure the endpoints] just as you would with any other transport, with the following additional attributes:

* user: the user name of the mailbox owner
* password: the password of the user
* host: the IP address of the POP3 server, such as www.mulesoft.com, localhost, or 127.0.0.1
* port: the port number of the POP3 server. If not set for the POP3S connector, the default port is 995.

For example:

[source, xml, linenums]
----
<pop3:inbound-endpoint user="bob" password="foo" host="pop.gmail.com" checkFrequency="3000" />
----

or if using a POP3S connector:

[source, xml, linenums]
----
<pop3s:inbound-endpoint user="bob" password="foo" host="pop.gmail.com" checkFrequency="3000" />
----

You can also define the endpoints using a URI syntax:

[source, xml, linenums]
----
<pop3s:inbound-endpoint address="pop3://bob:foo@pop.gmail.com" checkFrequency="3000" />
----

This will log into the `bob` mailbox on `pop.gmail.com` using password `foo` (using the default port 995 for the POP3S endpoint).

For more information about transformers, see the link:/mule-user-guide/v/3.8/email-transport-reference[Transformers] section in the Email Transport Reference.

For more information about filters, see the link:/mule-user-guide/v/3.8/email-transport-reference[Filters] section in the Email Transport Reference.

== Exchange Patterns / Features of the Transport

See link:/mule-user-guide/v/3.8/transports-reference[transport matrix].

== Schema Reference

You can view the full schema for POP3 email transport link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3/namespace-overview.html[here]. The secure version is link:http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[here].

== Java API Reference

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/email/package-summary.html[Javadoc for POP3 Transport]

== Maven Module

The email transports are implemented by the mule-transport-email module. You can find the source for the email transport under transports/email.

If you are using maven to build your application, use the following dependency snippet to include the email transport in your project:

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-email</artifactId>
</dependency>
----

== Limitations

For more information about the limitations, see the link:/mule-user-guide/v/3.8/email-transport-reference[Limitations] section in the Email Transport Reference.
